Fixed the 4.4 cases and added new cases